# homelab-fastmcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.es.md  CODE_OF_CONDUCT.md  CONTRIBUTING.es.md  CONTRIBUTING.md  LICENSE  README.es.md  README.md  auditoria-homelab-fastmcp.md  pyproject.toml  router.py  server.legacy.py  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_question.md
.github/workflows/: ci.yml
config/: router.toml
core/: __init__.py  audit.py  bootstrap.py  inventory.py  loader.py  plugin_mgmt.py  profile.py  secrets.py  skills.py
core/memory/: __init__.py  engram.py  noop.py  sqlite.py
docs/: ARCHITECTURE.md  BUGS.md  CHANGELOG.md  INSTALL.md  MCP-DOWNSTREAM-ISSUES.md  compatibility.md  framework-deferrals.md  inventory-schema.md  naming-guide.md  plugin-contract.md  quickstart.md  security-model.md
docs/cutover/manifests/docker/: plugin.toml
docs/cutover/manifests/gpon/: plugin.toml
docs/cutover/manifests/unifi/: plugin.toml
docs/es/: ARCHITECTURE.md  INSTALL.md  compatibility.md  inventory-schema.md  naming-guide.md  plugin-contract.md  quickstart.md  security-model.md
docs/operator-notes/: 2026-04-27-homelab-plugin-pending-setup-diagnosis.md  README.md  audit-bridge.md  downstream-issues.md  framework-deferrals.md  plan-gpon-github-issues-source.md  plan-nginxui-mcp-plugin.md  plan-token-consumption-profiler.md  reddit-post-draft.md  release-procedure.md  runtime-issues.md  spec-net-tools-plugin-20260510.md  tool-gaps-reverse-proxy-plan-20260510.md
docs/operator-notes/cutover/: README.md
docs/operator-notes/cutover/manifests/gpon/: capabilidades.md
docs/operator-notes/cutover/manifests/homelab/: plugin.toml
docs/operator-notes/cutover/manifests/linux/: plugin.toml
docs/operator-notes/cutover/manifests/proxmox/: plugin.toml
docs/operator-notes/cutover/manifests/windows/: plugin.toml
docs/operator-notes/legacy/: README.md  SECURITY.md
docs/security/: audit-2026-04-26-1242.md
examples/echo-plugin/: README.md  plugin.toml  server.py
inventory/: hosts.yaml.example  services.yaml.example
native_tools/: github.py  secrets.py  tailscale.py  uart_detect.py
plugins/_example/: plugin.toml
plugins/net-tools/: plugin.toml  pyproject.toml
plugins/net-tools/net_tools/: __init__.py  errors.py  http_client.py  models.py  multi_instance.py  server.py
plugins/net-tools/net_tools/adguard/: __init__.py  client.py  tools.py
plugins/net-tools/net_tools/cloudflare/: __init__.py  client.py  tools.py
plugins/net-tools/tests/: test_adguard_tools.py  test_cloudflare_tools.py  test_http_client.py  test_multi_instance.py
plugins/unifi/: plugin.toml
profiles/: default.yaml
scripts/: audit_to_runtime_issues.py
tests/: test_adaptive.py  test_audit_to_runtime.py  test_core_audit.py  test_core_bootstrap.py  test_core_inventory.py  test_core_loader.py  test_core_memory.py  test_core_memory_engram.py  test_core_plugin_mgmt.py  test_core_profile.py  test_core_secrets.py  test_core_secrets_keyring.py  test_core_skills.py  test_coverage_gaps.py  test_critical.py  test_cutover_manifests.py  test_env_propagation_downstream.py  test_example_plugin.py  test_integration.py  test_integration_e2e.py  test_resilience.py  test_router_wiring.py  test_security.py  test_security_extended.py
tests/legacy/: README.md  test_adaptive.py  test_env_propagation_downstream.py  test_security.py
tests/manual/: simple_test.py  smoke_opencode_command.py  test_com4_detect.py  test_gpon_ssh.py  test_hardware.py
