[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "net-tools-mcp"
version = "0.1.0"
description = "MCP plugin: Cloudflare DNS + Pi-hole + AdGuard management for mimir-mcp"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "CTRQuko" }]
keywords = ["mcp", "model-context-protocol", "cloudflare", "pihole", "adguard", "dns"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "mcp[cli]>=1.0",
  "httpx>=0.28",
  "pydantic>=2.5",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-httpx>=0.30",  # respx-style httpx mocking
]

[project.scripts]
net-tools-mcp = "net_tools.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["net_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
